--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        
+    </main>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
