[UPD]Created base structor in index.html

--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        
-    </main>
+    <div id="app">
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 d-flex">
+                        <div class="col-4 d-flex">
+                            <div class="content" id="left"></div>
+                        </div>
+                        <div class="col-8 d-flex">
+                            <div class="content" id="right"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
