--- a/Index.html
+++ b/Index.html
@@ -12,12 +12,29 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 d-flex">
+                    <div class="col-12 d-flex my-4">
                         <div class="col-4 d-flex">
-                            <div class="content" id="left"></div>
+                            <div class="content" id="left">
+                                <div class="section-top">
+                                    <div class="content"></div>
+                                </div>
+                                <div class="section-main">
+                                    <div class="content"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-8 d-flex">
-                            <div class="content" id="right"></div>
+                            <div class="content" id="right">
+                                <div class="section-top">
+                                    <div class="content"></div>
+                                </div>
+                                <div class="section-center">
+                                    <div class="content"></div>
+                                </div>
+                                <div class="section-bottom">
+                                    <div class="content"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
