--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,10 @@
                     <div class="col-12 d-flex my-4">
                         <div class="col-4 d-flex">
                             <div class="content" id="left">
-                                <div class="section-top">
+                                <div class="section-big-top">
                                     <div class="content"></div>
                                 </div>
-                                <div class="section-main">
+                                <div class="section-center">
                                     <div class="content"></div>
                                 </div>
                             </div>
@@ -28,7 +28,7 @@
                                 <div class="section-top">
                                     <div class="content"></div>
                                 </div>
-                                <div class="section-center">
+                                <div class="section-center bg-image">
                                     <div class="content"></div>
                                 </div>
                                 <div class="section-bottom">
