--- a/Index.html
+++ b/Index.html
@@ -15,23 +15,31 @@
                     <div class="col-12 d-flex my-4">
                         <div class="col-4 d-flex">
                             <div class="content" id="left">
-                                <div class="section-big-top">
+                                <div class="section-top bg-gray">
+                                    <div class="content">
+                                    </div>
+                                </div>
+                                <div class="section-alert bg-azure">
                                     <div class="content"></div>
                                 </div>
-                                <div class="section-center">
+                                <div class="section-search">
+                                    <div class="content"></div>
+                                </div>
+                                <div class="section-main">
                                     <div class="content"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-8 d-flex">
                             <div class="content" id="right">
-                                <div class="section-top">
-                                    <div class="content"></div>
+                                <div class="section-top bg-gray">
+                                    <div class="content">
+                                    </div>
                                 </div>
                                 <div class="section-center bg-image">
                                     <div class="content"></div>
                                 </div>
-                                <div class="section-bottom">
+                                <div class="section-bottom bg-gray">
                                     <div class="content"></div>
                                 </div>
                             </div>
