--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -16,31 +17,40 @@
                         <div class="col-4 d-flex">
                             <div class="content" id="left">
                                 <div class="section-top bg-gray">
-                                    <div class="content">
+                                    <div class="content d-flex">
                                     </div>
                                 </div>
                                 <div class="section-alert bg-azure">
-                                    <div class="content"></div>
+                                    <div class="content d-flex"></div>
                                 </div>
                                 <div class="section-search">
-                                    <div class="content"></div>
+                                    <div class="content d-flex">
+                                        <div class="col-12 pad-5">
+                                            <div class="input-group">
+                                                <span class="input-group-text bg-white"><i class="fab fa-sistrix col-gray"></i></span>
+                                                <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
+                                            </div>    
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="section-main">
-                                    <div class="content"></div>
+                                    <div class="content d-flex">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-8 d-flex">
                             <div class="content" id="right">
                                 <div class="section-top bg-gray">
-                                    <div class="content">
+                                    <div class="content d-flex">
+                                        <i class="fab fa-sistrix"></i>
                                     </div>
                                 </div>
                                 <div class="section-center bg-image">
                                     <div class="content"></div>
                                 </div>
                                 <div class="section-bottom bg-gray">
-                                    <div class="content"></div>
+                                    <div class="content d-flex"></div>
                                 </div>
                             </div>
                         </div>
