--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Boolzapp</title>
 </head>
 <body>
     <div id="app">
@@ -17,7 +17,7 @@
                         <div class="col-4 d-flex">
                             <div class="content" id="left">
                                 <div class="section-top bg-gray">
-                                    <div class="content d-flex">
+                                    <div class="content">
                                     </div>
                                 </div>
                                 <div class="section-alert bg-azure">
@@ -27,7 +27,7 @@
                                     <div class="content d-flex">
                                         <div class="col-12 pad-5">
                                             <div class="input-group">
-                                                <span class="input-group-text bg-white"><i class="fab fa-sistrix col-gray"></i></span>
+                                                <span class="input-group-text bg-white"><i class="fab fa-sistrix text-secondary fw-bold"></i></span>
                                                 <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
                                             </div>    
                                         </div>
@@ -50,7 +50,14 @@
                                     <div class="content"></div>
                                 </div>
                                 <div class="section-bottom bg-gray">
-                                    <div class="content d-flex"></div>
+                                    <div class="content">
+                                        <div class="input-group">
+                                            <button><i class="fas fa-face-flushed text-secondary"></i></button>
+                                            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                            <button><i class="fas fa-location-arrow arrow-rotate text-secondary"></i></button>
+                                          </div>
+                                          
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -59,6 +66,7 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
