--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,11 @@
                                     </div>
                                 </div>
                                 <div class="section-alert bg-azure">
-                                    <div class="content d-flex"></div>
+                                    <div class="content">
+                                        <i class="fas fa-bell-slash"></i>
+                                        <p class="alert-text">Ricevi notifiche di nuovi messaggi!</p>
+                                        <p class="alert-text-secondary">Attive le notifiche!</p>
+                                    </div>
                                 </div>
                                 <div class="section-search">
                                     <div class="content d-flex">
@@ -53,7 +57,7 @@
                                     <div class="content">
                                         <div class="input-group">
                                             <button><i class="fas fa-face-flushed text-secondary"></i></button>
-                                            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                            <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                             <button><i class="fas fa-location-arrow arrow-rotate text-secondary"></i></button>
                                           </div>
                                           
