[UPD]Added avatr section in index.html and style.css

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,11 @@
                             <div class="content" id="left">
                                 <div class="section-top bg-gray">
                                     <div class="content">
+                                        <img class="avatar" src="./img/avatar_io.jpg" alt="My Avatar">
+                                        <p class="d-inline-block avatar-name">Wendigo</p>
+                                        <i class="fas fa-circle-notch text-secondary"></i>
+                                        <i class="fas fa-message text-secondary"></i>
+                                        <i class="fas fa-ellipsis-vertical text-secondary"></i>
                                     </div>
                                 </div>
                                 <div class="section-alert bg-azure">
