[FIX]Fixed some lements in style.css and index.html

--- a/Index.html
+++ b/Index.html
@@ -17,12 +17,16 @@
                         <div class="col-4 d-flex">
                             <div class="content" id="left">
                                 <div class="section-top bg-gray">
-                                    <div class="content">
-                                        <img class="avatar" src="./img/avatar_io.jpg" alt="My Avatar">
-                                        <p class="d-inline-block avatar-name">Wendigo</p>
-                                        <i class="fas fa-circle-notch text-secondary"></i>
-                                        <i class="fas fa-message text-secondary"></i>
-                                        <i class="fas fa-ellipsis-vertical text-secondary"></i>
+                                    <div class="content d-flex align-middle">
+                                        <div class="col-6">
+                                            <img class="avatar" src="./img/avatar_io.jpg" alt="My Avatar">
+                                            <p class="d-inline-block avatar-name">Wendigo</p>
+                                        </div>
+                                        <div class="col-6 d-flex justify-content-end">
+                                            <i class="fas fa-circle-notch text-secondary mx-2"></i>
+                                            <i class="fas fa-message text-secondary mx-2"></i>
+                                            <i class="fas fa-ellipsis-vertical text-secondary mx-2 me-3"></i>
+                                        </div> 
                                     </div>
                                 </div>
                                 <div class="section-alert bg-azure">
