--- a/Index.html
+++ b/Index.html
@@ -57,11 +57,16 @@
                         </div>
                         <div class="col-8 d-flex">
                             <div class="content" id="right">
-                                <div class="section-top bg-gray">
-                                    <div class="content">
+                                <div class="section-top bg-gray d-flex">
+                                    <div class="col-8">
                                         <img :src="contacts[activeContact].avatar" class="avatar mb-1">
                                         <span class="fw-bold mx-2">{{contacts[activeContact].name}}</span>
                                         <p class="access-contact">Ultimo accesso alle {{ contacts[activeContact].messages.at(-1).date.split(" ")[1] }}</p>
+                                    </div>
+                                    <div class="options col-4 d-flex align-items-center justify-content-end text-secondary flex-end">
+                                        <i class="fa-solid fa-magnifying-glass mx-2"></i>
+                                        <i class="fa-solid fa-paperclip mx-2"></i>
+                                        <i class="fas fa-ellipsis-vertical mx-2 me-4 mt-0"></i>
                                     </div>
                                 </div>
                                 <div class="section-center bg-image">
